Refactor the Brother stuff.

--- a/meson.build
+++ b/meson.build
@@ -55,8 +55,8 @@ decoderlib = shared_library('decoderlib',
         'lib/decoders/decoders.cc',
         'lib/decoders/mfmdecoder.cc',
         'lib/decoders/ibmparser.cc',
-		'lib/decoders/brotherdecoder.cc',
-		'lib/decoders/brotherparser.cc',
+		'lib/brother/decoder.cc',
+		'lib/brother/parser.cc',
     ],
     include_directories: [feinc, fmtinc],
     link_with: [felib, fmtlib]
