Added the SectorSet class for holding collections of Sector objects --- much easier to deal with than ad-hoc maps.

--- a/meson.build
+++ b/meson.build
@@ -40,6 +40,7 @@ felib = shared_library('felib',
         'lib/image.cc',
 		'lib/crc.cc',
 		'lib/hexdump.cc',
+		'lib/sectorset.cc',
     ],
     include_directories: [fmtinc],
     link_with: [fmtlib],
