--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: c
 
-env:
-    global: HOMEBREW_NO_AUTO_UPDATE=1
-
 compiler:
     - gcc
 
 os:
     - linux
+
+dist:
+    - xenial
 
 addons:
     apt:
