--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ addons:
         packages:
         - ninja-build
         - meson
+        - libusb-dev
+        - libsqlite3-dev
 
 script:
     - make
