--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ addons:
         packages:
         - ninja-build
         - meson
-        - libusb-dev
+        - libusb-1.0-0-dev
         - libsqlite3-dev
 
 script:
