Remember to add the new file to the build system...

--- a/meson.build
+++ b/meson.build
@@ -21,6 +21,7 @@ felib = shared_library('felib',
         'lib/image.cc',
 		'lib/crc.cc',
 		'lib/hexdump.cc',
+        'lib/sector.cc',
 		'lib/sectorset.cc',
     ],
     include_directories: [fmtinc],
