Add Kryoflux stream decoder tests --- sadly, no bugs. Add a tool to convert CWF format files to FluxEngine files.

--- a/meson.build
+++ b/meson.build
@@ -175,8 +175,10 @@ executable('fe-writeflux',         ['src/fe-writeflux.cc'],         include_dire
 executable('fe-writetestpattern',  ['src/fe-writetestpattern.cc'],  include_directories: [feinc, fmtinc], link_with: [felib, writerlib, fmtlib])
 
 executable('brother120tool',       ['tools/brother120tool.cc'],     include_directories: [feinc, fmtinc], link_with: [felib, fmtlib])
+executable('cwftoflux',            ['tools/cwftoflux.cc'],          include_directories: [feinc, fmtinc], link_with: [felib, fmtlib, sqllib])
 
-test('DataSpec',        executable('dataspec-test', ['tests/dataspec.cc'], include_directories: [feinc], link_with: [felib]))
-test('Flags',           executable('flags-test', ['tests/flags.cc'],       include_directories: [feinc], link_with: [felib]))
-test('FmMfm',           executable('fmmfm-test', ['tests/fmmfm.cc'],       include_directories: [feinc, decoderinc], link_with: [felib, decoderlib]))
-test('BitAccumulator',  executable('bitaccumulator-test', ['tests/bitaccumulator.cc'],       include_directories: [feinc], link_with: [felib]))
+test('DataSpec',        executable('dataspec-test', ['tests/dataspec.cc'],             include_directories: [feinc], link_with: [felib]))
+test('Flags',           executable('flags-test', ['tests/flags.cc'],                   include_directories: [feinc], link_with: [felib]))
+test('FmMfm',           executable('fmmfm-test', ['tests/fmmfm.cc'],                   include_directories: [feinc, decoderinc], link_with: [felib, decoderlib]))
+test('BitAccumulator',  executable('bitaccumulator-test', ['tests/bitaccumulator.cc'], include_directories: [feinc], link_with: [felib]))
+test('Kryoflux',        executable('kryoflux-test', ['tests/kryoflux.cc'],             include_directories: [feinc, decoderinc, streaminc], link_with: [felib, decoderlib, streamlib]))
