Add a skeleton for the AES Lanier disks.

--- a/meson.build
+++ b/meson.build
@@ -85,6 +85,15 @@ encoderlib = shared_library('encoderlib',
     link_with: [felib, fmtlib]
 )
 
+aeslanierdecoderlib = shared_library('aeslanierdecoderlib',
+    [
+		'lib/aeslanier/decoder.cc',
+    ],
+    include_directories: [feinc, fmtinc, decoderinc],
+    link_with: [felib, fmtlib, decoderlib]
+)
+aeslanierinc = include_directories('lib/aeslanier')
+
 amigadecoderlib = shared_library('amigadecoderlib',
     [
 		'lib/amiga/decoder.cc',
@@ -158,6 +167,7 @@ victor9kinc = include_directories('lib/victor9k')
 executable('fe-erase',             ['src/fe-erase.cc'],             include_directories: [feinc], link_with: [felib, writerlib])
 executable('fe-inspect',           ['src/fe-inspect.cc'],           include_directories: [feinc, fmtinc, decoderinc], link_with: [felib, readerlib, decoderlib, fmtlib])
 executable('fe-readadfs',          ['src/fe-readadfs.cc'],          include_directories: [feinc, fmtinc, decoderinc, ibminc], link_with: [felib, readerlib, decoderlib, ibmdecoderlib, fmtlib])
+executable('fe-readaeslanier',     ['src/fe-readaeslanier.cc'],     include_directories: [feinc, fmtinc, decoderinc, aeslanierinc], link_with: [felib, readerlib, decoderlib, aeslanierdecoderlib, fmtlib])
 executable('fe-readamiga',         ['src/fe-readamiga.cc'],         include_directories: [feinc, fmtinc, decoderinc, amigainc], link_with: [felib, readerlib, decoderlib, amigadecoderlib, fmtlib])
 executable('fe-readampro',         ['src/fe-readampro.cc'],         include_directories: [feinc, fmtinc, decoderinc, ibminc], link_with: [felib, readerlib, decoderlib, ibmdecoderlib, fmtlib])
 executable('fe-readapple2',        ['src/fe-readapple2.cc'],        include_directories: [feinc, fmtinc, decoderinc, apple2inc], link_with: [felib, readerlib, decoderlib, apple2decoderlib, fmtlib])
